try add fantom and arbitrum network

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "run-env": "npm i && tail -f /dev/null",
     "hardhat": "hardhat",
+    "hardhat:arbitrum": "hardhat --network arbitrum",
+    "hardhat:fantom": "hardhat --network fantom",
+    "hardhat:ftmTestnet": "hardhat --network ftmTestnet",
     "hardhat:kovan": "hardhat --network kovan",
     "hardhat:tenderly-main": "hardhat --network tenderlyMain",
     "hardhat:ropsten": "hardhat --network ropsten",
@@ -28,6 +31,9 @@
     "test:main:check-list": "npm run compile && FORK=main TS_NODE_TRANSPILE_ONLY=1 hardhat test  test-suites/test-aave/__setup.spec.ts test-suites/test-aave/mainnet/check-list.spec.ts",
     "dev:coverage": "buidler compile --force && buidler coverage --network coverage",
     "aave:evm:dev:migration": "npm run compile && hardhat aave:dev",
+    "aave:arbitrum:full:migration": "npm run compile && npm run hardhat:arbitrum -- aave:mainnet --skip-registry",
+    "aave:fantom:full:migration": "npm run compile && npm run hardhat:fantom -- aave:mainnet --skip-registry",
+    "aave:ftmTestnet:full:migration": "npm run compile && npm run hardhat:ftmTestnet -- aave:mainnet --skip-registry",
     "aave:docker:full:migration": "npm run compile && npm run hardhat:docker -- aave:mainnet --skip-registry",
     "aave:kovan:full:migration": "npm run compile && npm run hardhat:kovan -- aave:mainnet --skip-registry",
     "matic:mumbai:full:migration": "npm run compile && npm run hardhat:mumbai sidechain:mainnet -- --pool Matic --skip-registry",
