--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
     "aave:docker:full:migration": "npm run compile && npm run hardhat:docker -- aave:mainnet --skip-registry",
     "aave:kovan:full:migration": "npm run compile && npm run hardhat:kovan -- aave:mainnet --skip-registry",
 
-    "aave:mainnet:full:migration": "npm run compile && npm run hardhat:main -- aave:mainnet",
-    "aave:matic:full:migration": "npm run compile && npm run hardhat:matic -- aave:mainnet --skip-registry",
-    "aave:matic:full:migration:add-registry": "npm run compile && npm run hardhat:matic -- aave:mainnet",
+    "aave:mainnet:full:migration:add-registry": "npm run compile && npm run hardhat:main -- aave:mainnet",
 
     "matic:mumbai:full:migration": "npm run compile && npm run hardhat:mumbai sidechain:mainnet -- --pool Matic --skip-registry",
     "matic:matic:full:migration": "npm run compile && npm run hardhat:matic sidechain:mainnet -- --pool Matic --skip-registry",
